--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
           context: myContext
           create-repo: true
           dockerfile: Dockerfile
-          no-output-timeout: 20
+          no-output-timeout: 20m
           region: AWS_REGION_ENV_VAR_NAME
           repo: ecs-cicd-nginx
           tag: 'latest,myECRRepoTag'
